--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketcho</title>
+    <title>index</title>
 
-    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="recordsketch.js"></script>
   </head>
 
   <body>
-    <script src="cristo.js"></script>
+    <script src="vortexsketch.js"></script>
   </body>
 </html>
