--- a/record.html
+++ b/record.html
@@ -6,10 +6,11 @@
 
     <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
+    <script src="vortexsketch.js"></script>
   </head>
 
   <body>
