--- a/soundeffect.html
+++ b/soundeffect.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Sketch</title>
+    <script>
+      //  function pass() {
+      //    var val;
+      //    var params = new URLSearchParams();
+      //    params.append("val", val);
+      //    location.href = "record.html?" + params.toString();
+      //  }
+    </script>
 
+    <a href="record.html">Record</a>
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
