--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 
     <title>index</title>
 
-    <link rel="stylesheet" type="text/css" href="CSS/style.css" />
-    <a href="soundeffect.html">Soundeffect</a>
+    <script src="/libraries/p5.min.js"></script>
+    <script src="/libraries/p5.sound.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-    <script src="../libraries/p5.min.js"></script>
-    <script src="../libraries/p5.sound.min.js"></script>
-    <script src="recordsketch.js"></script>
   </head>
 
-  <body>
-    <script src="vortexsketch.js"></script>
+  <body style="margin:0%">
+    <script src="vortexsketch.js" style="margin:0%"></script>
   </body>
 </html>
