--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>index</title>
 
     <link rel="stylesheet" type="text/css" href="CSS/style.css" />
-    <a href="soundeffect.html">Soundeffect</a>
+    <!-- <a href="soundeffect.html">Soundeffect</a> -->
 
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
