--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
     <script src="recordsketch.js"></script>
+    <script src="refresh.js"></script>
   </head>
 
   <body>
+    <a href="javascript:window.top.location.reload(true)" class="continue"
+      >Refresh</a
+    >
     <script src="vortexsketch.js"></script>
-    <script src="firebase-setup.js"></script>
+    <!--<script src="firebase-setup.js"></script>-->
   </body>
 </html>
