--- a/record.html
+++ b/record.html
@@ -26,6 +26,6 @@
     <h1 class="title"> THE SOUND </br> OF CHAOS</h1>
 
     <script src="recordsketch.js"></script>
-    <script src="firebase-setup.js"></script>
+    <!--<script src="firebase-setup.js"></script>-->
   </body>
 </html>
