--- a/soundeffect.html
+++ b/soundeffect.html
@@ -21,6 +21,6 @@
 
   <body>
     <script src="soundeffect.js"></script>
-    <script src="firebase-setup.js"></script>
+    <!-- <script src="firebase-setup.js"></script> -->
   </body>
 </html>
