--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <script src="recordsketch.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
- 
+    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:wght@200;300&display=swap" rel="stylesheet">
+
   </head>
 
-  <body style="margin:0;">
+  <body style="margin:0">
     <script src="vortexsketch.js"></script>
+    
     <!--<script src="firebase-setup.js"></script>-->
   </body>
 </html>
