--- a/record.html
+++ b/record.html
@@ -12,20 +12,12 @@
     <script src="/libraries/p5.sound.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:wght@200;300&display=swap" rel="stylesheet">
+
   </head>
 
-  <body>
-
-    <div class="menu">
-      <a class="link1" href="index.html"> upload</a>
-      <a class="link2" href="about.html"> about</a>
-    </div>
-
-
-    <h1 class="title"> THE SOUND </br> OF CHAOS</h1>
+  <body style="margin:0">
 
     <script src="recordsketch.js"></script>
-    <!--<script src="firebase-setup.js"></script>-->
   </body>
 </html>
