--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SPEACHLESS</title>
+    <title>The sound of Chaos</title>
     <link rel="icon" type="image/png" href="./assets/favicon.svg" />
     <link rel="stylesheet" type="text/css" href="CSS/aboutstyle.css" />
     <link rel="stylesheet" href="https://use.typekit.net/btp4jeh.css" />
@@ -16,7 +16,6 @@
   <body>
 
     <nav>
-      
     
 
     <div class="main-logo-grid">
