--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>index</title>
+    <title>The Sound of Chaos</title>
 
     <!--  <link rel="stylesheet" type="text/css" href="CSS/style.css" />
     <a href="soundeffect.html">Soundeffect</a> -->
