--- a/record.html
+++ b/record.html
@@ -6,7 +6,7 @@
 
     <title>The Sound of Chaos</title>
 
-    <link rel="stylesheet" type="text/css" href="/CSS/recstyle.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/recstyle.css" />
 
     <script src="/libraries/p5.min.js"></script>
     <script src="/libraries/p5.sound.min.js"></script>
@@ -21,7 +21,7 @@
     <script src="recordsketch.js"></script>
 
     <div id="top-right">
-      <a href="about.html">About</a>
+
     </div>
     
   </body>
